--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link href="/css/black.css" rel="stylesheet" id="stylesheet" />
     <link href="/css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
 
-    <meta property="og:url" content="https://forkdelta.github.io" />
-    <meta property="og:title" content="ForkDelta | Decentralized Ethereum Token Exchange" />
-    <meta property="og:description" content="ForkDelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
-    <meta property="og:image" content="https://forkdelta.github.io/images/logo.png" />
+    <meta property="og:url" content="https://gochaindelta.com" />
+    <meta property="og:title" content="Gochaindelta | Decentralized Gochain Token Exchange" />
+    <meta property="og:description" content="GochainDelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
+    <meta property="og:image" content="https://GochainDelta.com/images/logo.png" />
 
-    <title>ForkDelta | Decentralized Ethereum Token Exchange</title>
-    <meta name="description" content="ForkDelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
+    <title>GochainDelta | Decentralized Ethereum Token Exchange</title>
+    <meta name="description" content="GochainDelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
     <meta name="twitter:widgets:autoload" content="off">
   </head>
 
@@ -45,7 +45,7 @@
             <li class="dropdown" id="tokensDropdown"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-          	<li><a href="/about/"><i class="fa fa-info-circle"></i> About ForkDelta</a></li>
+          	<li><a href="/about/"><i class="fa fa-info-circle"></i> About GochainDelta</a></li>
           	<li style="display: none;" class="dropdown" id="helpDropdown"></li>
             <li class="dropdown" id="tokenGuidesDropdown"></li>
             <li class="dropdown" id="connection"></li>
@@ -120,29 +120,29 @@
                       </p>
                       <p style="color: #f00; font-weight: bold;">URL & Status</p>
                       <p style="font-size: 12px;">
-                        The URL of this project is <a href="https://forkdelta.github.io">forkdelta.github.io</a>. Bookmark it once and use the bookmark.
+                        The URL of this project is <a href="https://gochaindelta.com">GochainDelta.com</a>. Bookmark it once and use the bookmark.
                       </p>
                       <p style="font-size: 12px;">
                         This interface is a fork of <a href="https://etherdelta.com">EtherDelta</a> with a ton of improvements including a much faster order processing system.
-                        It interacts with ForkDelta's revamped API and EtherDelta's original contract.
+                        It interacts with GochainDelta's revamped API and EtherDelta's original contract.
                       </p>
                       <p style="color: #f00; font-weight: bold;">How to Start Trading</p>
                       <p style="font-size: 12px;">
-                        <strong>Use the Deposit form (upper left) to put your funds (ETH and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. ForkDelta cannot help you with funds incorrectly deposited to the trading smart contract.
+                        <strong>Use the Deposit form (upper left) to put your funds (ETH and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. GochainDelta cannot help you with funds incorrectly deposited to the trading smart contract.
                       </p>
-                      <p style="color: #f00; font-weight: bold;">ForkDelta Disclaimer</p>
+                      <p style="color: #f00; font-weight: bold;">GochainDelta Disclaimer</p>
                       <p style="font-size: 12px;">
-                        ForkDelta is a decentralized trading platform that lets
+                        GochainDelta is a decentralized trading platform that lets
                         you trade Ether and Ethereum-based tokens directly with other users.
                         You are responsible for your own account, funds, and private keys.
                         You are responsible for your own trading decisions, and the details
                         and mechanics of the tokens you trade.
-                        ForkDelta is not responsible for your decisions, actions, or losses that result from
-                        using ForkDelta. ForkDelta makes no guarantee about the tokens that you trade using
-                        ForkDelta. ForkDelta does not hold your funds and does not offer refunds.
-                        While the information contained on ForkDelta is periodically updated, no guarantee is given
-                        that the information provided on ForkDelta is correct, complete, or up-to-date.
-                        By using ForkDelta, you acknowledge this and agree to these terms.
+                        GochainDelta is not responsible for your decisions, actions, or losses that result from
+                        using GochainDelta. GochainDelta makes no guarantee about the tokens that you trade using
+                        GochainDelta. GochainDelta does not hold your funds and does not offer refunds.
+                        While the information contained on GochainDelta is periodically updated, no guarantee is given
+                        that the information provided on GochainDelta is correct, complete, or up-to-date.
+                        By using GochainDelta, you acknowledge this and agree to these terms.
                       </p>
                     </div>
                   </div>
@@ -221,7 +221,7 @@
         twttr.widgets.createTimeline(
           {
             sourceType: 'profile',
-            screenName: 'ForkDelta'
+            screenName: 'GochainDelta'
           },
           document.getElementById('updates'),
           {
