--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <meta property="og:url" content="https://gochaindelta.com" />
     <meta property="og:title" content="Gochaindelta | Decentralized Gochain Token Exchange" />
-    <meta property="og:description" content="GochainDelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
+    <meta property="og:description" content="GochainDelta is a decentralized Gochain Token Exchange with the most GOC listings of any exchange. Start trading cryptocurrency today." />
     <meta property="og:image" content="https://GochainDelta.com/images/logo.png" />
 
-    <title>GochainDelta | Decentralized Ethereum Token Exchange</title>
-    <meta name="description" content="GochainDelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
+    <title>GochainDelta | Decentralized Gochain Token Exchange</title>
+    <meta name="description" content="GochainDelta is a decentralized Gochain Token Exchange with the most GOC listings of any exchange. Start trading cryptocurrency today." />
     <meta name="twitter:widgets:autoload" content="off">
   </head>
 
@@ -114,26 +114,18 @@
                   <div class="tab-content">
                   <div role="tabpanel" class="tab-pane active" id="important">
                     <div style="margin: 12px;">
-                      <p>
-                        <a href="https://discord.gg/mMnRq7m" target="_blank"><img alt="Chat on Discord" src="https://img.shields.io/badge/chat-on%20discord-7289da.svg" /></a>
-                        <a href="https://www.reddit.com/r/ForkDelta" target="_blank"><img alt="Join us on Reddit" src="https://img.shields.io/badge/reddit-ForkDelta-red.svg" /></a>
-                      </p>
                       <p style="color: #f00; font-weight: bold;">URL & Status</p>
-                      <p style="font-size: 12px;">
-                        The URL of this project is <a href="https://gochaindelta.com">GochainDelta.com</a>. Bookmark it once and use the bookmark.
-                      </p>
-                      <p style="font-size: 12px;">
-                        This interface is a fork of <a href="https://etherdelta.com">EtherDelta</a> with a ton of improvements including a much faster order processing system.
-                        It interacts with GochainDelta's revamped API and EtherDelta's original contract.
+					  <p style="font-size: 12px;">
+                        The URL of this project is <a href="https://gochaindelta.com">Gochaindelta.com</a>. Bookmark it once and use the bookmark.
                       </p>
                       <p style="color: #f00; font-weight: bold;">How to Start Trading</p>
                       <p style="font-size: 12px;">
-                        <strong>Use the Deposit form (upper left) to put your funds (ETH and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. GochainDelta cannot help you with funds incorrectly deposited to the trading smart contract.
+                        <strong>Use the Deposit form (upper left) to put your funds (GOC and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. GochainDelta cannot help you with funds incorrectly deposited to the trading smart contract.
                       </p>
                       <p style="color: #f00; font-weight: bold;">GochainDelta Disclaimer</p>
                       <p style="font-size: 12px;">
                         GochainDelta is a decentralized trading platform that lets
-                        you trade Ether and Ethereum-based tokens directly with other users.
+                        you trade GOC and Gochain-based tokens directly with other users.
                         You are responsible for your own account, funds, and private keys.
                         You are responsible for your own trading decisions, and the details
                         and mechanics of the tokens you trade.
@@ -187,15 +179,6 @@
     <script src="/js/chrome-u2f-api.js" type="text/javascript"></script>
     <script src="/js/ledger.min.js" type="text/javascript"></script>
     <script src="/js/main.js" type="text/javascript"></script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-112001937-1', 'auto');
-      ga('send', 'pageview');
-    </script>
 
     <script>window.twttr = (function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0],
