updated ticker to GO

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <meta property="og:url" content="https://gochaindelta.com" />
     <meta property="og:title" content="Gochaindelta | Decentralized Gochain Token Exchange" />
-    <meta property="og:description" content="GochainDelta is a decentralized Gochain Token Exchange with the most GOC listings of any exchange. Start trading cryptocurrency today." />
+    <meta property="og:description" content="GochainDelta is a decentralized Gochain Token Exchange with the most GO listings of any exchange. Start trading cryptocurrency today." />
     <meta property="og:image" content="https://GochainDelta.com/images/logo.png" />
 
     <title>GochainDelta | Decentralized Gochain Token Exchange</title>
-    <meta name="description" content="GochainDelta is a decentralized Gochain Token Exchange with the most GOC listings of any exchange. Start trading cryptocurrency today." />
+    <meta name="description" content="GochainDelta is a decentralized Gochain Token Exchange with the most GO listings of any exchange. Start trading cryptocurrency today." />
     <meta name="twitter:widgets:autoload" content="off">
   </head>
 
@@ -120,12 +120,12 @@
                       </p>
                       <p style="color: #f00; font-weight: bold;">How to Start Trading</p>
                       <p style="font-size: 12px;">
-                        <strong>Use the Deposit form (upper left) to put your funds (GOC and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. GochainDelta cannot help you with funds incorrectly deposited to the trading smart contract.
+                        <strong>Use the Deposit form (upper left) to put your funds (GO and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. GochainDelta cannot help you with funds incorrectly deposited to the trading smart contract.
                       </p>
                       <p style="color: #f00; font-weight: bold;">GochainDelta Disclaimer</p>
                       <p style="font-size: 12px;">
                         GochainDelta is a decentralized trading platform that lets
-                        you trade GOC and Gochain-based tokens directly with other users.
+                        you trade GO and Gochain-based tokens directly with other users.
                         You are responsible for your own account, funds, and private keys.
                         You are responsible for your own trading decisions, and the details
                         and mechanics of the tokens you trade.
