--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://gochaindelta.com" />
     <meta property="og:title" content="Gochaindelta | Decentralized Gochain Token Exchange" />
     <meta property="og:description" content="GochainDelta is a decentralized Gochain Token Exchange with the most GO listings of any exchange. Start trading cryptocurrency today." />
-    <meta property="og:image" content="https://GochainDelta.com/images/logo.png" />
+    <meta property="og:image" content="https://gochaindelta.com/images/logo.png" />
 
     <title>GochainDelta | Decentralized Gochain Token Exchange</title>
     <meta name="description" content="GochainDelta is a decentralized Gochain Token Exchange with the most GO listings of any exchange. Start trading cryptocurrency today." />
